--- a/doc/cofi-ann.bib
+++ b/doc/cofi-ann.bib
@@ -513,6 +513,7 @@ annote = "Presents an approach for the composition of languages, in
                  foundations, tools, and libraries, a realistic case
                  study, and a quick-reference overview of
                  \textsc{Casl}.",
+   note = {Free online version available at \url{http://www.cofi.info}},
 }
 
 @InProceedings{Bidoit:2004:CFS,
@@ -935,6 +936,7 @@ including the abstract syntax of \textsc{Casl}.",
                  syntax, well-formedness and model-class semantics, and
                  proof rules. Includes the libraries of basic
                  datatypes.",
+   note = {Free online version available at \url{http://www.cofi.info}},
 }
 
 @InCollection{CoFI:2004:CASL-Summary,
