--- a/doc/cofibib.bib
+++ b/doc/cofibib.bib
@@ -102,6 +102,7 @@ ENTRIES for CoFI Documents  ************************************
    series = {Lecture Notes in Computer Science},
    year = 2004,
    volume = {2960},
+   note = {Free online version available at \url{http://www.cofi.info}},
 }
 
 @Book{CASL/UserManual,
