--- a/doc/kl.bib
+++ b/doc/kl.bib
@@ -369,7 +369,9 @@ The Revised Report},
   year =         "2004",
   series =       "LNCS",
   volume = "2900",
+   note = {Free online version available at \url{http://www.cofi.info}},
 }
+
 @InProceedings{Roggenbach:2003:C-CN,
   author =       "Markus Roggenbach",
   title =        "{CSP}-\textsc{Casl} -- {A} New Integration of Process
